[tool.poetry]
name = "neuron-poker"
version = "0.1.0"
description = ""
authors = ["Nicolas Dickreuter <dickreuter@gmail.com>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pytest = "^8.0.0"
pylint = "^3.0.3"
gym = "0.23.0"
pyglet = "1.5.15"
pybind11 = "^2.11.1"
cppimport = "^22.8.2"
docopt = "^0.6.2"
pydocstyle = "^6.3.0"
matplotlib = "^3.8.2"
mpld3 = "^0.5.10"
ray = {extras = ["tune"], version = "^2.42.0"}
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
gymnasium = "^1.0.0"
dm-tree = "^0.1.9"
scipy = "^1.15.1"
tune = "^0.1.6"
lz4 = "^4.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
